--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,41 @@
+.tab {
+  display: inline-flex;
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #04AA6D;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.selectedTab {
+  color: white;
+  background-color: cadetblue;
+  border: none;
+  border-radius: 15px;
+}
+
+.nonSelectedTab {
+  color: black;
+  background-color: white;
+  border: 2px solid gray;
+}
+
+.content {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  width: 85%;
+  height: 100px;
+  padding: 25px;
+  margin-left: 100px;
+  border: 2px solid gray;
+  border-radius: 15px;
+}
+
 .App {
   text-align: center;
 }
